--- a/latte-core/src/main/res/values/style.xml
+++ b/latte-core/src/main/res/values/style.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="dialog" parent="android:style/Theme.Dialog">
         <!--无边框-->
         <item name="android:windowFrame">@null</item>
@@ -15,5 +16,13 @@
         <item name="android:backgroundDimEnabled">true</item>
         <!--全屏-->
         <item name="android:windowFullscreen">true</item>
+    </style>
+    <!--透明Activity-->
+    <style name="Theme.AppCompat.Translucent">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
     </style>
 </resources>
