--- a/latte-core/src/main/res/layout/delegate_bottom.xml
+++ b/latte-core/src/main/res/layout/delegate_bottom.xml
@@ -10,6 +10,7 @@
     android:id="@+id/bottom_bar"
     android:layout_width="match_parent"
     android:layout_height="56dp"
+    android:background="@android:color/white"
     android:layout_alignParentBottom="true"
     android:orientation="horizontal"/>
 </RelativeLayout>
