--- a/latte-core/src/main/res/layout/delegate_bottom.xml
+++ b/latte-core/src/main/res/layout/delegate_bottom.xml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+
     <android.support.v7.widget.ContentFrameLayout
         android:id="@+id/bottom_bar_delegate_container"
+        android:layout_weight="9"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-<android.support.v7.widget.LinearLayoutCompat
-    android:id="@+id/bottom_bar"
-    android:layout_width="match_parent"
-    android:layout_height="56dp"
-    android:background="@android:color/white"
-    android:layout_alignParentBottom="true"
-    android:orientation="horizontal"/>
-</RelativeLayout>
+        android:layout_height="0dp"/>
+
+    <android.support.v7.widget.LinearLayoutCompat
+        android:id="@+id/bottom_bar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:minHeight="56dp"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/white"
+        android:orientation="horizontal"/>
+</LinearLayout>
