--- a/latte-ec/src/main/res/layout/delegate_sign_in.xml
+++ b/latte-ec/src/main/res/layout/delegate_sign_in.xml
@@ -68,6 +68,8 @@
             <Button
                 android:id="@+id/submit"
                 android:layout_marginTop="56dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/holo_blue_bright"
