--- a/latte-core/src/main/res/anim/push_bottom_out.xml
+++ b/latte-core/src/main/res/anim/push_bottom_out.xml
@@ -2,11 +2,11 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
         android:duration="300"
-        android:fromYDelta="100%p"
-        android:toYDelta="0" />
+        android:fromYDelta="0"
+        android:toYDelta="50%p" />
 
     <alpha
         android:duration="300"
-        android:fromYDelta="0.0"
-        android:toYDelta="1.0" />
+        android:fromYDelta="1.0"
+        android:toYDelta="0.0" />
 </set>
