--- a/latte-ec/src/main/res/layout/delegate_index.xml
+++ b/latte-ec/src/main/res/layout/delegate_index.xml
@@ -34,6 +34,7 @@
                 android:textSize="24sp"
                 android:textColor="@android:color/white"/>
             <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/ic_search"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
