--- a/latte-core/src/main/res/layout/delegate_bottom.xml
+++ b/latte-core/src/main/res/layout/delegate_bottom.xml
@@ -13,6 +13,7 @@
     <android.support.v7.widget.LinearLayoutCompat
         android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
+        android:padding="8dp"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:minHeight="56dp"
