--- a/latte-core/src/main/res/layout/delegate_bottom.xml
+++ b/latte-core/src/main/res/layout/delegate_bottom.xml
@@ -9,7 +9,10 @@
         android:layout_weight="9"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@android:color/darker_gray"/>
     <android.support.v7.widget.LinearLayoutCompat
         android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
