--- a/locationby4g/src/main/res/layout/item_multiple_imsi.xml
+++ b/locationby4g/src/main/res/layout/item_multiple_imsi.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
+    android:id="@+id/cl_imsi"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -17,6 +18,15 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="460070528316669"/>
 
+    <com.joanzapata.iconify.widget.IconTextView
+        android:id="@+id/iv_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="{fa-map-marker}"
+        android:textColor="@color/colorAccent"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_imsi"
+        app:layout_constraintLeft_toRightOf="@+id/tv_imsi"/>
     <TextView
         android:id="@+id/tv_time"
         style="@style/TextHint"
