--- a/locationby4g/src/main/res/layout/delegate_imsi_line.xml
+++ b/locationby4g/src/main/res/layout/delegate_imsi_line.xml
@@ -25,10 +25,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:padding="4dp"
-        android:shadowRadius="4"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         android:lines="1"
         android:text="定位"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
