--- a/locationby4g/src/main/res/values/styles.xml
+++ b/locationby4g/src/main/res/values/styles.xml
@@ -15,4 +15,17 @@
         <item name="android:lines">1</item>
         <item name="android:textSize">10sp</item>
     </style>
+    <style name="set_text">
+        <item name="android:background">@drawable/background</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:paddingLeft">16dp</item>
+    </style>
+    <style name="main_text">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_marginLeft">16dp</item>
+    </style>
 </resources>
