--- a/locationby4g/src/main/res/layout/delegate_imsi.xml
+++ b/locationby4g/src/main/res/layout/delegate_imsi.xml
@@ -5,14 +5,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
 
     <include
         android:id="@+id/include"
         layout="@layout/toolbar"/>
 
     <LinearLayout
-        android:padding="4dp"
+        android:padding="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -34,9 +35,38 @@
             android:visibility="gone"
             android:text="0 ~ 100 "/>
     </LinearLayout>
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_imsi"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="0dp"
+        android:layout_weight="9"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/info"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/btn_save"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+
+            android:layout_height="match_parent"
+            android:text="保存"/>
+        <View
+            android:layout_width="1px"
+            android:layout_height="match_parent"
+            android:background="@color/info"/>
+        <TextView
+            android:id="@+id/btn_clear"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:layout_height="match_parent"
+            android:text="清除"/>
+    </LinearLayout>
 </LinearLayout>
