--- a/latte-core/src/main/res/layout/delegate_bottom.xml
+++ b/latte-core/src/main/res/layout/delegate_bottom.xml
@@ -20,6 +20,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:minHeight="56dp"
+        android:elevation="10dp"
         android:layout_alignParentBottom="true"
         android:background="@android:color/white"
         android:orientation="horizontal"/>
