--- a/wifimanage/src/main/res/layout/delegate_device_detail.xml
+++ b/wifimanage/src/main/res/layout/delegate_device_detail.xml
@@ -4,6 +4,7 @@
     xmlns:circle="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <include
@@ -15,6 +16,7 @@
         android:layout_height="120dp">
 
         <com.ascend.wangfeng.wifimanage.views.CircleImageView
+            android:id="@+id/cimg_icon"
             android:layout_width="88dp"
             android:layout_height="88dp"
             android:layout_margin="16dp"
@@ -28,7 +30,7 @@
             android:orientation="vertical">
 
             <TextView
-
+                android:id="@+id/tv_device_name"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
@@ -37,10 +39,11 @@
                 android:textSize="18sp"/>
 
             <TextView
+                android:id="@+id/tv_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="iphone7"
+                android:text="描述:标签"
                 android:textSize="14sp"/>
         </LinearLayout>
     </LinearLayout>
@@ -64,13 +67,14 @@
             android:orientation="vertical">
 
             <TextView
-
+                android:id="@+id/tv_lasttime"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="最近更新时间  2018/4/12 12:06"/>
 
             <TextView
+                android:id="@+id/tv_firsttime"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
@@ -91,8 +95,27 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:textColor="@color/textFir"
+                android:text="拥有者"/>
+            <TextView
+                android:id="@+id/tv_owner"
+                android:gravity="end"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="choose"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textColor="@color/textFir"
                 android:text="IP地址"/>
             <TextView
+                android:id="@+id/tv_ip"
                 android:gravity="end"
                 android:layout_width="0dp"
                 android:layout_weight="1"
@@ -110,6 +133,7 @@
                 android:textColor="@color/textFir"
                 android:text="MAC地址"/>
             <TextView
+                android:id="@+id/tv_mac"
                 android:gravity="end"
                 android:layout_width="0dp"
                 android:layout_weight="1"
@@ -127,6 +151,7 @@
                 android:textColor="@color/textFir"
                 android:text="设备产商"/>
             <TextView
+                android:id="@+id/tv_brand"
                 android:gravity="end"
                 android:layout_width="0dp"
                 android:layout_weight="1"
@@ -144,6 +169,7 @@
                 android:textColor="@color/textFir"
                 android:text="主机名"/>
             <TextView
+                android:id="@+id/tv_dhcp"
                 android:gravity="end"
                 android:layout_width="0dp"
                 android:layout_weight="1"
@@ -161,11 +187,12 @@
                 android:textColor="@color/textFir"
                 android:text="NetBIOS名称"/>
             <TextView
+                android:id="@+id/tv_netbios"
                 android:gravity="end"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="192.168.168.39"/>
+                android:text=""/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
