--- a/wifimanage/src/main/res/layout/item_device_square.xml
+++ b/wifimanage/src/main/res/layout/item_device_square.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_content"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="4dp"
+    android:background="@drawable/ll_round_normal">
 <!--方形布局-->
     <ImageView
         android:id="@+id/img_icon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/phone"/>
+        android:src="@mipmap/ic_computer"/>
 
     <TextView
         android:id="@+id/tv_name"
