--- a/wifimanage/src/main/res/layout/delegate_device_detail.xml
+++ b/wifimanage/src/main/res/layout/delegate_device_detail.xml
@@ -21,7 +21,8 @@
             android:layout_height="88dp"
             android:layout_margin="16dp"
             android:src="@drawable/phone"
-            circle:needBg="@color/colorAccent"/>
+            circle:bg="@color/textSec"
+            circle:srcType="1"/>
 
         <LinearLayout
             android:layout_width="match_parent"
