--- a/wifimanage/src/main/res/layout/toolbar.xml
+++ b/wifimanage/src/main/res/layout/toolbar.xml
@@ -28,6 +28,18 @@
                 android:text="@string/app_name"
                 android:textColor="@android:color/white"
                 android:textSize="20sp"/>
+            <com.joanzapata.iconify.widget.IconTextView
+                android:id="@+id/ic_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:padding="8dp"
+                android:textSize="28sp"
+                android:visibility="gone"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:gravity="center_vertical"
+                android:textColor="@android:color/white"
+                android:text="{fa-edit}"/>
         </RelativeLayout>
 
     </android.support.v7.widget.Toolbar>
