--- a/wifimanage/src/main/res/values/attrs.xml
+++ b/wifimanage/src/main/res/values/attrs.xml
@@ -3,7 +3,7 @@
     <declare-styleable name="CircleImageView">
         <attr name="icon" format="reference"/>
         <attr name="online" format="boolean"/>
-        <attr name="needBg" format="color"/>
-
+        <attr name="bg" format="color"/>
+        <attr name="srcType" format="integer"/>
     </declare-styleable>
 </resources>
