--- a/wifimanage/src/main/res/layout/delegate_person_detail.xml
+++ b/wifimanage/src/main/res/layout/delegate_person_detail.xml
@@ -4,6 +4,7 @@
     xmlns:circle="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
 
     android:orientation="vertical">
 
@@ -20,7 +21,8 @@
             android:layout_width="88dp"
             android:layout_height="88dp"
             android:layout_margin="16dp"
-            android:src="@drawable/test"
+            tools:src="@mipmap/p_2"
+            circle:bg="@color/colorAccent"
             circle:online="true"/>
 
         <LinearLayout
