--- a/wifimanage/src/main/res/layout/item_person.xml
+++ b/wifimanage/src/main/res/layout/item_person.xml
@@ -14,7 +14,8 @@
         android:layout_height="64dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        tools:src="@drawable/test"
+        tools:src="@mipmap/p_2"
+        circle:bg="@color/colorAccent"
         circle:online="true"/>
     <LinearLayout
         android:layout_width="0dp"
